<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/tc_ch_complete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_toEndOf="@id/tc_ch_complete"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tc_lb_taskTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/task_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tc_lb_taskDes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/task_des"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tc_lb_taskStatus"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/task_des"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tc_lb_taskDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/task_des"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/lb_tc_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/tc_edit"
            android:background="@drawable/my_priority_background_red"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/priority"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/tc_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_below="@id/lb_tc_priority"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            app:drawableStartCompat="@drawable/baseline_edit_24" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>